--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;700;800&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -411,28 +412,67 @@ button:hover {
   background: linear-gradient(to top right, #de2a6f, #72299b);
 }
 
-.result {
+.tasks {
   background: #222c3dbe;
   border-radius: 10px;
   padding: 30px;
+  min-height: 500px;
 }
 
-p {
+.result__title {
   color: #e0e0e0;
+  font-size: 24px;
+  margin-bottom: 30px;
+  font-weight: 800;
+}
+
+.result__item {
+  color: #e0e0e0;
+  margin-bottom: 20px;
+  font-size: 18px;
 }
 
 .delete::after {
-  content: "(detete)";
+  display: inline-block;
+  content: "";
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+  font-weight: 900;
+  width: 20px;
+  height: 20px;
+  font-size: 14px;
   color: #666666;
   cursor: pointer;
 }
 
 .edit::after {
-  content: "(edit)";
-  color: #72299b;
+  display: inline-block;
+  content: "";
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+  font-weight: 900;
+  width: 20px;
+  height: 20px;
+  font-size: 14px;
+  color: #666666;
   cursor: pointer;
+  margin-left: 10px;
 }
 
 #done {
   margin-right: 10px;
+}
+
+.subform {
+  margin-top: 20px;
+}
+
+.input__edit {
+  padding: 10px 15px;
+  border: 1px solid #4f555e;
+  border-radius: 5px;
+  background: #5c606659;
+  color: #e0e0e0;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  margin-bottom: 20px;
+  margin-right: 20px;
 }
