--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;700;800&display=swap');
 
 * {
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 
 body {
@@ -44,35 +44,74 @@ button {
     font-size: 14px;
     font-family: 'Montserrat', sans-serif;
     margin-bottom: 20px;
+
     &:hover {
         background: linear-gradient(to top right, #de2a6f, #72299b);
     }
 }
 
-.result {
+.tasks {
     background: #222c3dbe;
     border-radius: 10px;
     padding: 30px;
+    min-height: 500px;
+}
+
+.result__title {
+    color: #e0e0e0;
+    font-size: 24px;
+    margin-bottom: 30px;
+    font-weight: 800
 }
 
 
-p {
+.result__item {
     color: #e0e0e0;
-
+    margin-bottom: 20px;
+    font-size: 18px;
 }
 
 .delete::after {
-    content: '(detete)';
+    display: inline-block;
+    content: '\f2ed';
+    font-family: 'Font Awesome 5 Free', 'Font Awesome 5 Brands';
+    font-weight: 900;
+    width: 20px;
+    height: 20px;
+    font-size: 14px;
     color: rgb(102, 102, 102);
     cursor: pointer;
 }
 
 .edit::after {
-    content: '(edit)';
-    color: #72299b;
+    display: inline-block;
+    content: '\f304';
+    font-family: 'Font Awesome 5 Free', 'Font Awesome 5 Brands';
+    font-weight: 900;
+    width: 20px;
+    height: 20px;
+    font-size: 14px;
+    color: rgb(102, 102, 102);
     cursor: pointer;
+    margin-left: 10px;
 }
 
 #done {
-   margin-right: 10px;
+    margin-right: 10px;
+}
+
+.subform {
+    margin-top: 20px;
+}
+
+.input__edit {
+    padding: 10px 15px;
+    border: 1px solid #4f555e;
+    border-radius: 5px;
+    background: #5c606659;
+    color: #e0e0e0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    margin-bottom: 20px;
+    margin-right: 20px;
 }
