--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -115,3 +115,5 @@ button {
     margin-bottom: 20px;
     margin-right: 20px;
 }
+
+@import 'weather.scss';
